--- a/src/pages/non-shared/PhoneBook/components/PhoneEach/PhoneEach.css
+++ b/src/pages/non-shared/PhoneBook/components/PhoneEach/PhoneEach.css
@@ -5,7 +5,7 @@
   margin-bottom: 15px;
   padding: 5px 10px;
   border-radius: 10px;
-  background-color: var(--bg-primary);
+  background-color: var(--bg-secondary);
 }
 .phoneBtn {
   background-color: #fee21f;
