--- a/src/pages/non-shared/ManageMeal/AddMeal/AddMeal.css
+++ b/src/pages/non-shared/ManageMeal/AddMeal/AddMeal.css
@@ -1,6 +1,7 @@
 .addMealRegulationIcon {
   padding: 5px;
-  background-color: #5d83ac;
+  background-color: var(--bg-tertiary);
+  color: #fff;
   border-radius: 5px;
   border: none;
 }
