--- a/src/pages/non-shared/ManageMessCost/AddMessCost/AddMealCost/AddMealCost.css
+++ b/src/pages/non-shared/ManageMessCost/AddMessCost/AddMealCost/AddMealCost.css
@@ -75,14 +75,14 @@
   min-height: 25px;
   width: 25px;
   margin-left: 5px;
-  color: var(--bg-body);
+  color: #fff;
 }
 .react-datepicker__input-container input {
   background: var(--gradient-primary) !important;
   min-height: 45px;
   font-size: 20px !important;
   text-align: center !important;
-  color: var(--bg-body) !important;
+  color: #fff;
   font-weight: 500;
   border: none;
   outline: none;
@@ -111,7 +111,7 @@
   background-color: var(--bg-secondary) !important;
 }
 .react-datepicker {
-  background-color: var(--bg-tertiary) !important;
+  background-color: var(--bg-secondary) !important;
   color: var(--text-primary) !important;
   border: none !important;
 }
