--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 :root {
   --bg-body: #11151c;
   --bg-primary: #242526;
-  --bg-secondary: #91b3ff26;
+  --bg-secondary: #171c25;
   --bg-tertiary: #4169e1;
 
   --bg-quaternary: #232e3b;
