phone ui update

--- a/src/pages/non-shared/ManageMessCost/AddMessCost/AddMealCost/AddMealCost.css
+++ b/src/pages/non-shared/ManageMessCost/AddMessCost/AddMealCost/AddMealCost.css
@@ -89,6 +89,10 @@
   border-radius: 10px;
   box-shadow: var(--card-shadow) !important;
 }
+.react-datepicker__input-container input::placeholder {
+  color: #fff;
+}
+
 .react-datepicker-wrapper {
   width: 100%;
 }
