--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
   /* --bg-app-primary: #434343; */
   --bg-app-primary: #060811;
   /* --bg-member: #27244652; */
+  --bg-extraDashboard: #1a232d;
   --bg-personalDashboard: #21293659;
   --text-primary: #e4e6eb;
   --text-secondary: #5d83ac;
