--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ body {
 }
 
 .swal2-popup {
-  background-color: var(--bg-tertiary) !important;
+  background-color: var(--bg-extraDashboard) !important;
 }
 .swal2-title {
   color: var(--text-primary) !important;
@@ -66,17 +66,16 @@ body {
   box-shadow: inset 0 0 10px -4px black !important;
 }
 
-
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
 
-.bg_tertiary{
+.bg_tertiary {
   background-color: var(--bg-tertiary) !important;
 }
