--- a/src/App.css
+++ b/src/App.css
@@ -124,12 +124,78 @@ html body .ant-input-affix-wrapper > input.ant-input:focus * {
 .ant-input-affix-wrapper > input.ant-input:focus * {
   box-shadow: 0 0 0 1000px #11151c inset !important;
 }
-.ant-picker-panel-container{
+.ant-picker-panel-container {
   background-color: var(--bg-extraDashboard);
 }
-.ant-picker-dropdown .ant-picker-today-btn{
+.ant-picker-dropdown .ant-picker-today-btn {
   color: var(--text-primary);
 }
-.ant-picker-dropdown .ant-picker-today-btn:hover{
+.ant-picker-dropdown .ant-picker-today-btn:hover {
   color: var(--text-secondary);
+}
+
+/* phone item each */
+
+.phoneItem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  padding: 5px 10px;
+  border-radius: 10px;
+  background-color: var(--bg-extraDashboard);
+  box-shadow: var(--card-shadow);
+}
+.phoneBtn {
+  background-color: #fee21f;
+  color: var();
+}
+.phoneItemLeft {
+  display: flex;
+  align-items: center;
+}
+.phoneItemPhoto {
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.iconSize {
+  width: 35px;
+}
+.phoneText {
+  font-size: 16px;
+}
+.phoneNameText {
+  font-size: 18px;
+}
+.phoneIconsGroup {
+  margin-top: 8px;
+  margin-right: 10px;
+}
+
+@media only screen and (max-width: 576px) {
+  .phoneItem {
+    background-color: #11121d;
+  }
+  .phoneNameText {
+    font-size: 18px;
+  }
+  .phoneText {
+    font-size: 17px;
+  }
+}
+@media only screen and (max-width: 380px) {
+  .phoneText {
+    font-size: 15px;
+  }
+  .phoneNameText {
+    font-size: 16px;
+  }
+  .iconSize {
+    width: 30px;
+  }
+  .phoneItemPhoto {
+    margin-right: 7px;
+  }
 }
