--- a/src/pages/non-shared/Home/components/MessDetails/MessDetails.css
+++ b/src/pages/non-shared/Home/components/MessDetails/MessDetails.css
@@ -12,7 +12,7 @@
   font-weight: 900;
   font-size: 26px;
 }
-.messDetailsIconSpace{
+.messDetailsIconSpace {
   margin-right: 10px;
 }
 
@@ -20,7 +20,12 @@
   .messDetails {
     padding: 20px 5px 20px 10px;
   }
-  .messDetailsIconSpace{
+  .messDetailsIconSpace {
     margin-right: 5px;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .messName {
+    display: none;
   }
 }
