--- a/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
+++ b/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
@@ -1,11 +1,22 @@
 .activeMonthBtnGroups {
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   flex-wrap: nowrap;
   overflow-x: auto;
-  margin: 0 30px;
+  margin: 30px;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.activeMonthBtnGroups::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.activeMonthBtnGroups {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
 .activeNav {
   background-color: #5d83ac;
   color: var(--bg-body);
